Sixth Commit with authorization and authentication
